--- a/Lab1/final-report/lab1-finalreport.tex
+++ b/Lab1/final-report/lab1-finalreport.tex
@@ -197,11 +197,11 @@ Initial convolutional processing is that the input tensor passes through the ini
 After the final epochs, Training loss and Testing accuracy was about 0.0586 and 85.8333 each\ref{tab:testresults}. Training loss and testing accuracy on every epoch show on fig\ref{fig:ResNetlossacc}
 
 \section{Discussion}
-For both models, The training loss graph is fluctuating, which might suggest issues with the large learning rate. Applying the Adam optimizer\cite{adamopt} or setting learning rate to be smaller may resolve the issue. VGG16 is better than ResNet50 in training loss and testing accuracy. That may be because ResNet has more parameters and deeper layers than VGGNet, making 15,000 training data insufficient to train all of its parameters. If there are more training data(and more categories), ResNet may be better than VGGNet because ResNet50 is better than VGG16 in the ResNet paper\cite{resnet_paper}, which trained the models with ImageNet. Also, dropout layers may help improving test accuracy with overfitting prevention.
+For both models, The training loss graph is fluctuating, which might suggest issues with the large learning rate. Applying the Adam optimizer\cite{adamopt} or setting learning rate to be smaller may resolve the issue. The test accuracy of both models are higher than 85\%, which shows that deeper layer improve the performance. Deeper layers have ability to represent complex function, and hierarchical learning. VGG16 is better than ResNet50 in training loss and testing accuracy. That may be because ResNet has more parameters and deeper layers than VGGNet, making 15,000 training data insufficient to train all of its parameters. If there are more training data(and more categories), ResNet may be better than VGGNet because ResNet50 is better than VGG16 in the ResNet paper\cite{resnet_paper}, which trained the models with ImageNet. Also, dropout layers may help improving test accuracy with overfitting prevention.
 \section{Conclusion}
-In this lab, We implemented The VGGNet16 and ResNet50 using Pytorch, training and testing the models with first 3-categories CIFAR-10 images. Also, we compared the performance of VGGNet and ResNet on the CIFAR-10 image classification task. Our experiments showed that VGG16 achieved a lower training loss and higher testing accuracy.
+In this lab, We implemented The VGGNet16 and ResNet50 using Pytorch, training and testing the models with first 3-categories CIFAR-10 images. Additionally, we compared the performance of VGGNet and ResNet on the CIFAR-10 image classification task. Our experiments showed that the test accuracy of both models greater than 85\%, and VGG16 achieved a lower training loss with higher testing accuracy.
 
-This result suggests that ResNet50 need more data because of it has more parameters, and VGGNet may be more suitable for less complex dataset lick CIFAR-10. However, it is useful to consider ResNet's advantages like residual connections. ResNet may become more powerful on larger image datasets. Therefore, It is important that selecting appropriate architectures based on the characteristic like size of the datasets.
+This result suggests that depper layers improve the performance, ResNet50 need more data because of it has more parameters, and VGGNet may be more suitable for less complex dataset lick CIFAR-10. However, it is useful to consider ResNet's advantages like residual connections. ResNet may become more powerful on larger image datasets. Therefore, It is important that selecting appropriate architectures based on the characteristic like size of the datasets.
 
 \newpage
 \bibliography{egbib}
