--- a/Lab5/final-report/lab5_finalreport.tex
+++ b/Lab5/final-report/lab5_finalreport.tex
@@ -79,10 +79,10 @@ $$
 A_{visual} = \textbf{layernorm}(\textbf{softmax}(\textbf{q}\textbf{k}^T / \sqrt{D_h}))
 $$
 
-The visualization of the attention matrix of 3rd head is shown in Figure \ref{fig:attentionvis1}. Additionally, the visualization of the 100th row of attention matrix of 0-7th heads is shown in Figure \ref{fig:attentionvis2}. Each 196 columns(except class token) is reshaped to $14\times14$.
+The visualization of the attention matrix of 3rd head is shown in Figure \ref{fig:attentionvis1}. Additionally, the visualization of the 100th row of attention matrix of 0-7th heads is shown in Figure \ref{fig:attentionvis2}. Each 196 columns(except class token) is reshaped to $14\times14$. In the attention matrix visualization, the bright regions indicate that the vision transformer pays more attention to those parts of the image.
 
 \subsection{MLP for classification}
-Output of the transformer encoder is fed to MLP head, which is fully connected layer that maps 768 features to 1000 classifications. MLP head layer is also pre-trained. We only fed the first rows of the output, corresponding to the class token index. The classification result is shown in Figure \ref{fig:classificationres}.
+Output of the transformer encoder is fed to MLP head, which is fully connected layer that maps 768 features to 1000 classifications. MLP head layer is also pre-trained. We only check the first rows of the output of the MLP head, corresponding to the class token index. The classification result is shown in Figure \ref{fig:classificationres}.
 
 \section{conclusion}
 We implemented the part of Vision Transformer\cite{vit}, and examine and tested the pre-trained Vision Transformer model. We visualize the position embedding and attention matrix. Additionally, we comfirmed that the pre-trained ViT could classify the Santorini image correctly. As a result, We verified that the Transformer\cite{transformer} can be directly applied to a image, attend to crucial parts of the image, and classify the image correctly.
@@ -159,7 +159,7 @@ We implemented the part of Vision Transformer\cite{vit}, and examine and tested 
 }
 	
 	\caption{
-		Visualization of 100th row of attention matrix of 0-7 heads.}
+		Visualization of 100th row of attention matrix of 0-7 heads. The bright regions indicate that the vision transformer pays more attention to those parts of the image.}
 	\vspace{-2mm}
         \label{fig:attentionvis2}
 \end{figure}
