--- a/Lab7/pre-report/Lab7_prereport.tex
+++ b/Lab7/pre-report/Lab7_prereport.tex
@@ -31,7 +31,7 @@ $^1$ Department of Computer Science and Engineering, Pusan National University.
 \section{Introduction}
 Class Activation Mapping(CAM)\cite{cam} modifies image classification CNN architectures replacing fully connected layers with global average pooling and a $1\times1$ convolutional layer for visual explanation. this approach cannot be applied to any other tasks except the image classification, and need to re-train. 
  
-In contrast, Gradient-weighted Class Activation Mapping(Grad-CAM)\cite{gradcam} is the technique for producing visual explanations, and visualizing the regions of the image that contributed to the results of the model. This method does not modify the CNN architecture or re-train the model.
+In contrast, Gradient-weighted Class Activation Mapping(Grad-CAM)\cite{gradcam} is the technique for producing visual explanations, without modifying the CNN architecture or re-training the model. Therefore this approach can be applied to various CNN model like image classification, segmentation, image captioning.
 
 This report summarize the Grad-CAM paper\cite{gradcam} with emphasis on its approach and architectural design.
 
