update lab8 ipynb

--- a/Lab8/ipynb/LAB_8_1_Contrastive_image_language_pretraining_(CLIP)_tutorial.ipynb
+++ b/Lab8/ipynb/LAB_8_1_Contrastive_image_language_pretraining_(CLIP)_tutorial.ipynb
@@ -180,8 +180,8 @@
    "outputs": [],
    "source": [
     "!pip install kaggle --upgrade\n",
-    "os.environ['KAGGLE_USERNAME'] = \"minchocoin\"\n",
-    "os.environ['KAGGLE_KEY'] = \"627b67dacfc28fb4847a83fff078baab\"\n",
+    "os.environ['KAGGLE_USERNAME'] = \"XXXXXXXX\"\n",
+    "os.environ['KAGGLE_KEY'] = \"XXXXXXXXXXXXX\"\n",
     "\n",
     "### For Flickr 8k\n",
     "!kaggle datasets download -d adityajn105/flickr8k\n",
